# manifold_splitting

./: CMakeLists.txt  main.cpp
data/: cube.off  points3
data/EPFL/castle_dense_large/: castle_dense_large.off
data/EPFL/fountain-P11/: fountain.off
data/KLabelPartitionerTest/: 000120_10.txt
data/WatermarkingBenchmark/: bunny.dot  bunny.graph  bunny.off  bunny.txt  dragon.off
data/WatermarkingBenchmark/bunnyOut/: bunny_0.off  bunny_1.off  bunny_2.off  bunny_3.off  bunny_4.off  bunny_5.off  bunny_6.off  bunny_7.off
examples/: BalancedPartitionTest.cpp  CMakeLists.txt  GeneralPartitioningTest.cpp  KLabelPartitionerTest.cpp  MultiTreePartitionerTest.cpp  ParMetisPartitioningTest.cpp
include/: GraphParser.h  InputManager.h  KLabelPartitioner.h  KSizeClustering.h  MTParallelCreator.h  MTSerialCreator.h  MTVisualizer.h  MeshManager.h  MultiTreeManager.h  MultiTreePartitioner.h  stopwatch.h  types.h  types_reconstructor.hpp
src/: GraphParser.cpp  InputManager.cpp  KLabelPartitioner.cpp  KSizeClustering.cpp  MTParallelCreator.cpp  MTSerialCreator.cpp  MTVisualizer.cpp  MeshManager.cpp  MultiTreeManager.cpp  MultiTreePartitioner.cpp  RegularGraphsGen.cpp  RegularGraphsGen.h
src/SpectralClustering/: SpectralClustering.cpp  SpectralClustering.h
src/core/multitree/: AdoptionHandler.cpp  AdoptionHandler.h  Concatenator.cpp  Concatenator.h  Creator.cpp  Creator.h  CreatorManager.cpp  CreatorManager.h  DescendantsHandler.cpp  DescendantsHandler.h  ParallelCreator.cpp  ParallelCreator.h  SerialCreator.cpp  SerialCreator.h  TreeTypes.h  Utilities.cpp  Utilities.h
src/io/: InputDescriber.cpp  InputDescriber.h  InputManager.cpp  InputManager.h
test/: BalancedPartitionTest.cpp  CMakeLists.txt  KLabelPartitionerTest.cpp  MetisPartitioningTest.cpp  MultiTreePartitionerDFTest.cpp  MultiTreePartitionerTest.cpp  RecursiveMTPTest.cpp  ZoltanGeomPartitioningTest.cpp  ZoltanGraphPartitioningTest.cpp  ZoltanPartitioningTest.cpp
